# tig

./: .env.example  .gitignore  README.md  pyproject.toml
src/tig/: __init__.py  modes.py
src/tig/prompts/: environment.py  objectives.py  rules.py  system.py  system_info.py  task.py  tools_formatting.py  tools_guidelines.py
src/tig/prompts/tools/: apply_diff.py  ask_followup_question.py  attempt_completion.py  execute_command.py  list_code_definitions.py  list_files.py  read_file.py  search_files.py  write_to_file.py
src/tig/services/: command_runner.py  llms.py
src/tig/services/tree_sitter/: parsers.py
src/tig/services/tree_sitter/queries/: __init__.py  javascript.py  python.py  tsx.py  typescript.py
src/tig/tools/: __init__.py  apply_diff.py  ask_followup_question.py  execute_command.py  list_code_definitions.py  list_files.py  read_file.py  search_files.py  write_to_file.py
src/tig/utils/: intro.py  syntax_checker.py  tools.py  verbose.py  xml.py
src/tig/workflows/: tig.py  workflow.py
