[project]
name = "tig"
version = "0.1.0"
description = "A terminal-based AI coding agent, similar to Claude Code, OpenAI Codex etc."
readme = "README.md"
authors = [
    { name = "Rohan", email = "rsrohan99@gmail.com" }
]
requires-python = ">=3.12.9"
dependencies = [
    "llama-index==0.12.28",
    "llama-index-core==0.12.28",
    "llama-index-llms-gemini==0.4.14",
    "llama-index-llms-anthropic==0.6.10",
    "llama-index-llms-openai==0.3.37",
    "llama-index-utils-workflow==0.3.0",
    "python-dotenv==1.1.0",
    "inquirer==3.4.0",
    "pathspec==0.12.1",
    "ordered-set==4.1.0",
    "tzlocal==5.3.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-typescript>=0.23.2",
    "diff-match-patch>=20241021",
    "psutil>=7.0.0",
]

[project.scripts]
tig = "tig:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
