[project]
name = "tig-code"
version = "0.1.6"
description = "A terminal-based AI coding agent, similar to Claude Code, OpenAI Codex etc. but works with many more LLMs."
readme = "README.md"
authors = [
    { name = "Rohan", email = "rsrohan99@gmail.com" }
]
requires-python = ">=3.12.9"
dependencies = [
    "llama-index==0.12.28",
    "llama-index-core==0.12.28",
    "llama-index-llms-google-genai>=0.1.9",
    "llama-index-llms-anthropic>=0.6.10",
    "llama-index-llms-openai>=0.3.37",
    "llama-index-utils-workflow>=0.3.0",
    "python-dotenv==1.1.0",
    "inquirer==3.4.0",
    "pathspec==0.12.1",
    "ordered-set==4.1.0",
    "tzlocal==5.3.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-typescript>=0.23.2",
    "diff-match-patch>=20241021",
    "psutil>=7.0.0",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-llms-groq>=0.3.1",
    "llama-index-llms-openrouter>=0.3.1",
    "llama-index-llms-deepseek>=0.1.1",
]

[project.scripts]
tig = "tig:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tig"]
